--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -220,14 +220,14 @@ html,body,#app,#body {
     left: 50%;
     top: 50%;
     width: 64px;
-    margin: -60px 0 0 -30px;
+    margin: -60px 0 0 -25px;
     cursor: pointer;
 }
 #run.disabled {
     cursor: auto;
 }
 #run i {
-    font-size: 60px;
+    font-size: 50px;
     color: #01215A;
 }
 #run i:hover {
@@ -236,6 +236,14 @@ html,body,#app,#body {
 #run.disabled i, #run.disabled i:hover {
     color: #999;
 }
+
+.ipad #run i {
+    font-size: 40px;
+}
+.ipad #run {
+    margin: -45px 0 0 -20px;
+}
+
 
 .alert {
     padding: 15px;
@@ -344,7 +352,7 @@ html,body,#app,#body {
 
 /*jsonviewer*/
 #expression-result {
-    padding: 12px 0 12px 24px;
+    padding: 12px 0 12px 22px;
 }
 #expression-result table {
     width: auto;
