--- a/src/Gistlyn/css/collections.css
+++ b/src/Gistlyn/css/collections.css
@@ -28,6 +28,17 @@
     padding: 4px 12px;
     line-height: 24px;
 }
+#btnHome {
+    color: #fff;
+    font-size: 17px;
+    vertical-align: middle;
+    margin: -2px 6px 0 -5px;
+    cursor: pointer;
+}
+#btnHome:hover {
+    color: #ddd;
+}
+
 #collection-body {
     overflow-y: auto;
     overflow-x: hidden; 
