--- a/src/Gistlyn.Resources/css/collections.css
+++ b/src/Gistlyn.Resources/css/collections.css
@@ -28,6 +28,14 @@
     padding: 4px 12px;
     line-height: 24px;
 }
+#btnHome {
+    color: #fff;
+    font-size: 17px;
+    vertical-align: middle;
+    margin: -2px 6px 0 -5px;
+    cursor: pointer;
+}
+
 #collection-body {
     overflow-y: auto;
     overflow-x: hidden; 
@@ -55,7 +63,7 @@
     display: block;
     text-decoration: none;
     color: #444;
-    width: 240px;
+    width: 200px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
