--- a/src/Gistlyn/css/app.css
+++ b/src/Gistlyn/css/app.css
@@ -121,11 +121,12 @@ html,body,#app,#body {
 
 #footer {
     background: #0371BE;
-    /*background: #01215A;*/
     min-height: 40px;
+    z-index: 10; /*for winforms over codemirror*/
 }
 
 #sig {
+    z-index: 10;
     position: absolute;
     left: 50%;
     bottom: 2px;
