--- a/src/Gistlyn/css/collections.css
+++ b/src/Gistlyn/css/collections.css
@@ -76,7 +76,7 @@
 }
 
 #markdown {
-    line-height: 20px;
+    line-height: 1.5;
     font-size: 16px;
     color: #444;
     padding: 0 0 0 30px;
@@ -117,6 +117,15 @@
 #markdown ul, #markdown ol {
     padding-left: 2em;
     margin: 0 0 16px 0; 
+}
+#markdown li>ul, #markdown li>ol {
+    margin: 0; 
+}
+#markdown li+li {
+    margin-top: 0.25em;
+}
+#markdown ul ul, #markdown ol ul {
+    list-style-type: circle;
 }
 #markdown ul {
     list-style-type: disc;
