--- a/src/Gistlyn/css/collections.css
+++ b/src/Gistlyn/css/collections.css
@@ -28,6 +28,9 @@
     padding: 4px 12px;
     line-height: 24px;
 }
+.owner #collection-header {
+    background: #4CAF50;
+}
 #btnHome {
     color: #fff;
     font-size: 17px;
