--- a/src/Gistlyn/css/editor.css
+++ b/src/Gistlyn/css/editor.css
@@ -70,6 +70,25 @@
     padding: 0 2px;
 }
 
+#markdown-toolbar {
+    margin: 0 0 2px 30px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+
+#markdown-toolbar i {
+    margin: 2px;
+    vertical-align: middle;
+    color: #666;
+    cursor: pointer;
+    border: solid 1px #fff;
+}
+#markdown-toolbar i:hover {
+    border: solid 1px #c6c6c6;
+    border-radius: 2px;
+    background: #f8f8f8;
+}
+
 .owner #tabs {
     background: #4CAF50;
 }
